--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "swiper": "^6.8.0",
+    "video-react": "^0.14.1",
     "web-vitals": "^1.1.2",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.7.2"
